--- a/index.html
+++ b/index.html
@@ -1,111 +1,135 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Infinity Shell — Osprey Terminal</title>
+<meta charset="UTF-8" />
+<title>Osprey Terminal — Infinity OS</title>
 
-  <style>
-    body {
-      margin: 0;
-      background: #0d0d0d;
-      font-family: Consolas, monospace;
-      overflow: hidden;
-      color: #00eaff;
-    }
+<style>
+  body {
+    background: #000;
+    color: #00eaff;
+    font-family: monospace;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+  }
 
-    #boot-screen {
-      position: fixed;
-      inset: 0;
-      background: black;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 2rem;
-      color: #00eaff;
-    }
+  #terminal {
+    width: 100%;
+    height: 60vh;
+    background: #000;
+    padding: 10px;
+    overflow-y: auto;
+    border-bottom: 2px solid #00eaff;
+  }
 
-    #terminal {
-      display: none;
-      position: absolute;
-      top: 20px;
-      left: 20px;
-      width: 90%;
-      height: 70%;
-      background: rgba(0,0,0,0.7);
-      border: 1px solid #00eaff;
-      padding: 10px;
-      overflow-y: auto;
-      border-radius: 8px;
-    }
+  #input-area {
+    padding: 8px;
+    background: #000;
+    color: #00eaff;
+    border-top: 2px solid #00eaff;
+  }
 
-    #input-line {
-      width: 100%;
-      outline: none;
-      border: none;
-      background: transparent;
-      color: #fff;
-      font-family: Consolas, monospace;
-      font-size: 1rem;
-    }
+  #input-line {
+    width: 100%;
+    background: #000;
+    color: #00eaff;
+    border: none;
+    outline: none;
+    font-family: monospace;
+    font-size: 16px;
+  }
 
-    #rogers-panel {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      background: #0f0f0f;
-      border: 1px solid #00eaff;
-      padding: 12px;
-      width: 320px;
-      height: 180px;
-      border-radius: 10px;
-      display: none;
-      color: #fff;
-      overflow-y: auto;
-    }
+  /* ROGERS PANEL */
+  #rogers-panel {
+    position: fixed;
+    right: 0;
+    top: 0;
+    width: 340px;
+    height: 100vh;
+    background: rgba(0,0,0,0.92);
+    border-left: 2px solid #00eaff;
+    display: none;
+    flex-direction: column;
+  }
 
-    #rogers-open {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      background: #00eaff;
-      border: none;
-      padding: 12px 18px;
-      border-radius: 8px;
-      color: black;
-      cursor: pointer;
-      font-weight: bold;
-    }
-  </style>
+  #rogers-output {
+    padding: 10px;
+    height: calc(100vh - 120px);
+    overflow-y: auto;
+  }
+
+  #rogers-header {
+    padding: 10px;
+    background: #111;
+    border-bottom: 2px solid #00eaff;
+    font-weight: bold;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  /* BUTTON BAR */
+  #mode-buttons {
+    display: flex;
+    justify-content: space-around;
+    padding: 8px;
+    background: #111;
+    border-top: 2px solid #00eaff;
+  }
+
+  .mode-btn {
+    padding: 6px 10px;
+    border: 1px solid #00eaff;
+    background: #000;
+    color: #00eaff;
+    cursor: pointer;
+    border-radius: 4px;
+    font-size: 12px;
+  }
+
+  .mode-btn:hover {
+    background: #00eaff;
+    color: #000;
+  }
+
+  #rogers-mode {
+    color: #00eaff;
+    font-size: 12px;
+  }
+</style>
 </head>
 
 <body>
 
-  <div id="boot-screen">∞ Infinity Shell v1 — Booting…</div>
+<div id="terminal">
+  <div id="output"></div>
+</div>
 
-  <div id="terminal">
-    <div id="output"></div>
-    <div>
-      <span style="color:#00eaff;">osprey@infinity:</span>
-      <input id="input-line" autofocus />
-    </div>
+<div id="input-area">
+  <input id="input-line" autocomplete="off" />
+</div>
+
+<!-- ROGERS PANEL -->
+<div id="rogers-panel">
+  <div id="rogers-header">
+    Rogers AI
+    <span id="rogers-mode">Mode: SMART</span>
   </div>
 
-  <button id="rogers-open">Rogers</button>
+  <div id="rogers-output"></div>
 
-  <div id="rogers-panel"></div>
+  <!-- BUTTON BAR (QUIET / SMART / FULL) -->
+  <div id="mode-buttons">
+    <div class="mode-btn" onclick="Rogers.setMode('quiet')">QUIET</div>
+    <div class="mode-btn" onclick="Rogers.setMode('smart')">SMART</div>
+    <div class="mode-btn" onclick="Rogers.setMode('full')">FULL</div>
+  </div>
+</div>
 
-  <script src="shell.js"></script>
-  <script src="rogers.js"></script>
-
-  <script>
-    // Boot animation
-    setTimeout(() => {
-      document.getElementById("boot-screen").style.display = "none";
-      document.getElementById("terminal").style.display = "block";
-    }, 1800);
-  </script>
+<script src="shell.js"></script>
+<script src="rogers.js"></script>
+<script src="apps/intelligence-core.js"></script>
 
 </body>
-  </html>
-  
+</html>
