--- a/index.html
+++ b/index.html
@@ -128,14 +128,15 @@
 </div>
 
 <!-- Load core libs in the proper order:
-     1) rogers.js (Rogers global)
-     2) apps/intelligence-core.js (IntelligenceCore)
-     3) apps/exec-engine.js (Exec)  <-- previously missing
-     4) shell.js (UI that uses Exec)
+     1) pyodide (optional but included so Python works out of the box)
+     2) rogers.js (Rogers global)
+     3) apps/intelligence-core.js (IntelligenceCore)
+     4) apps/exec-engine.js (Exec)
+     5) shell.js (UI that uses Exec)
 -->
 
-<!-- Optional: Pyodide for Python support (uncomment if you want Python enabled) -->
-<!-- <script src="https://cdn.jsdelivr.net/pyodide/v0.23.4/full/pyodide.js"></script> -->
+<!-- Pyodide (Python runtime) - required for 'python' command in Exec -->
+<script src="https://cdn.jsdelivr.net/pyodide/v0.23.4/full/pyodide.js"></script>
 
 <script src="rogers.js"></script>
 <script src="apps/intelligence-core.js"></script>
