--- a/index.html
+++ b/index.html
@@ -3,103 +3,15 @@
 <head>
 <meta charset="UTF-8" />
 <title>Osprey Terminal — Infinity OS</title>
-
 <style>
-  body {
-    background: #000;
-    color: #00eaff;
-    font-family: monospace;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-  }
-
-  #terminal {
-    width: 100%;
-    height: 60vh;
-    background: #000;
-    padding: 10px;
-    overflow-y: auto;
-    border-bottom: 2px solid #00eaff;
-  }
-
-  #input-area {
-    padding: 8px;
-    background: #000;
-    color: #00eaff;
-    border-top: 2px solid #00eaff;
-  }
-
-  #input-line {
-    width: 100%;
-    background: #000;
-    color: #00eaff;
-    border: none;
-    outline: none;
-    font-family: monospace;
-    font-size: 16px;
-  }
-
-  /* ROGERS PANEL */
-  #rogers-panel {
-    position: fixed;
-    right: 0;
-    top: 0;
-    width: 340px;
-    height: 100vh;
-    background: rgba(0,0,0,0.92);
-    border-left: 2px solid #00eaff;
-    display: none;
-    flex-direction: column;
-  }
-
-  #rogers-output {
-    padding: 10px;
-    height: calc(100vh - 120px);
-    overflow-y: auto;
-  }
-
-  #rogers-header {
-    padding: 10px;
-    background: #111;
-    border-bottom: 2px solid #00eaff;
-    font-weight: bold;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  /* BUTTON BAR */
-  #mode-buttons {
-    display: flex;
-    justify-content: space-around;
-    padding: 8px;
-    background: #111;
-    border-top: 2px solid #00eaff;
-  }
-
-  .mode-btn {
-    padding: 6px 10px;
-    border: 1px solid #00eaff;
-    background: #000;
-    color: #00eaff;
-    cursor: pointer;
-    border-radius: 4px;
-    font-size: 12px;
-  }
-
-  .mode-btn:hover {
-    background: #00eaff;
-    color: #000;
-  }
-
-  #rogers-mode {
-    color: #00eaff;
-    font-size: 12px;
-  }
+  body { background:#000; color:#00eaff; font-family:monospace; margin:0; padding:0; }
+  #terminal { width:100%; height:60vh; background:#000; padding:10px; overflow-y:auto; border-bottom:2px solid #00eaff; }
+  #output { white-space:pre-wrap; }
+  #input-area { padding:8px; background:#000; color:#00eaff; border-top:2px solid #00eaff; }
+  #input-line { width:100%; background:#000; color:#00eaff; border:none; outline:none; font-family:monospace; font-size:16px; }
+  #status { position:fixed; left:0; bottom:0; width:100%; background:#001f26; color:#9ff; padding:6px; font-size:13px; border-top:2px solid #00eaff; box-sizing:border-box; }
 </style>
 </head>
-
 <body>
 
 <div id="terminal">
@@ -110,16 +22,13 @@
   <input id="input-line" autocomplete="off" />
 </div>
 
-<!-- ROGERS PANEL -->
-<div id="rogers-panel">
-  <div id="rogers-header">
-    Rogers AI
-    <span id="rogers-mode">Mode: SMART</span>
-  </div>
+<!-- Visible status bar so you can see debug messages without dev tools -->
+<div id="status">loading…</div>
 
+<!-- ROGERS PANEL (unchanged) -->
+<div id="rogers-panel" style="display:none;">
+  <div id="rogers-header">Rogers AI <span id="rogers-mode">Mode: SMART</span></div>
   <div id="rogers-output"></div>
-
-  <!-- BUTTON BAR (QUIET / SMART / FULL) -->
   <div id="mode-buttons">
     <div class="mode-btn" onclick="Rogers.setMode('quiet')">QUIET</div>
     <div class="mode-btn" onclick="Rogers.setMode('smart')">SMART</div>
@@ -127,20 +36,16 @@
   </div>
 </div>
 
-<!-- Load core libs in the proper order:
-     1) pyodide (optional but included so Python works out of the box)
-     2) rogers.js (Rogers global)
-     3) apps/intelligence-core.js (IntelligenceCore)
-     4) apps/exec-engine.js (Exec)
-     5) shell.js (UI that uses Exec)
--->
-
-<!-- Pyodide (Python runtime) - required for 'python' command in Exec -->
+<!-- Script load order (Pyodide included so python command should work) -->
 <script src="https://cdn.jsdelivr.net/pyodide/v0.23.4/full/pyodide.js"></script>
-
 <script src="rogers.js"></script>
 <script src="apps/intelligence-core.js"></script>
 <script src="apps/exec-engine.js"></script>
+
+<!-- Debug script to print statuses to the page -->
+<script src="apps/exec-debug.js"></script>
+
+<!-- Shell UI -->
 <script src="shell.js"></script>
 
 </body>
