--- a/index_2.html
+++ b/index_2.html
@@ -1,33 +1,8 @@
 <!DOCTYPE html>
-<!-- 🐶 PEWPI SIGN-IN (GLOBAL) -->
-<div id="pewpi-gate">
-  <h1>🐶 pewpi</h1>
-  <input id="pewpi_user" placeholder="Handle">
-  <button onclick="pewpiUnlock()">Enter</button>
-</div>
-<script>
-function pewpiUnlock(){
-  localStorage.setItem("pewpi_user", document.getElementById("pewpi_user").value);
-  document.getElementById("pewpi-gate").style.display="none";
-  document.body.classList.add("pewpi-live");
-}
-if(localStorage.getItem("pewpi_user")){
-  document.addEventListener("DOMContentLoaded",()=>{
-    const g=document.getElementById("pewpi-gate");
-    if(g) g.style.display="none";
-    document.body.classList.add("pewpi-live");
-  });
-}
-</script>
-<style>
-#pewpi-gate{position:fixed;inset:0;background:#0e0e0e;color:#fff;display:flex;flex-direction:column;align-items:center;justify-content:center;z-index:9999}
-#pewpi-gate button{background:#ff69b4;border:0;padding:10px 18px}
-body:not(.pewpi-live)>*:not(#pewpi-gate){filter:blur(6px);pointer-events:none}
-</style>
 <html>
 <head>
 <meta charset="UTF-8" />
-<title>∞ Osprey-Terminal</title>
+<title>Osprey Terminal — Infinity OS</title>
 <style>
   body { background:#000; color:#00eaff; font-family:monospace; margin:0; padding:0; }
   #terminal { width:100%; height:60vh; background:#000; padding:10px; overflow-y:auto; border-bottom:2px solid #00eaff; }
