Add hamburger menu v1.0

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ body:not(.pewpi-live)>*:not(#pewpi-gate){filter:blur(6px);pointer-events:none}
   #input-line { width:100%; background:#000; color:#00eaff; border:none; outline:none; font-family:monospace; font-size:16px; }
   #status { position:fixed; left:0; bottom:0; width:100%; background:#001f26; color:#9ff; padding:6px; font-size:13px; border-top:2px solid #00eaff; box-sizing:border-box; }
 </style>
+<script defer src="https://pewpi-infinity.github.io/infinity-crown-index/js/infinity-menu.js"></script>
 </head>
 <body>
 
